@@ -1,12 +1,14 @@
-CVS
+~$
 \.bak$
+blib
 \.bs$
+build
 \.c$
-\.o$
+CVS
+\.cvsignore$
 Makefile$
 Makefile\.old$
-~$
+\.o$
+\.spec$
 \.sw.$
-\.cvsignore$
-blib
-build
+\.tar\.gz$
