@@ -1,3 +1,10 @@
+2004/10/24 11:55 (-0400) rwmcfa1
+
+	* MANIFEST.SKIP: updates
+
+	* perl-Gnome2.spec.in: new scheme that addresses x86_64 problems
+	found by Carl Nygard
+
 2004/09/14 00:08 (+0200) kaffeetisch
 
 	* t/GnomeIconList.t, t/GnomePasswordDialog.t, t/GnomeProgram.t,
